[project]
name = "fast-database-clients"
description = "A class to facilitate rapid deployment of clients to send data to various databases"

version = "2.2.1"

readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { email = "matthew@davidson.engineering" },
  { name = "Matthew Davidson" },
]

classifiers = [
  "Development Status :: 1 - Planning",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dependencies = [
  "influxdb_client >= 1.40.0",
  "tomli >= 2.0.1 ; python_version < '3.11'",
  "pyyaml >= 6.0.1",
  "pytz >= 2024.1",
  "config-loader @ git+https://github.com/davidson-engineering/python-config-loader.git@v0.1.3",
]

[tool.setuptools]
packages = ["src"]

[tool.uv.sources]
fast-database-clients = { workspace = true }

[dependency-groups]
dev = ["fast-database-clients", "pytest>=8.3.4", "pytest-cov>=5.0.0"]

[project.urls]
# homepage = "https://example.com"
# documentation = "https://readthedocs.org"
repository = "https://github.com/davidson-engineering/fast-database-clients"
# changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

# [project.scripts]
# spam-cli = "spam:main_cli"

# [project.gui-scripts]
# spam-gui = "spam:main_gui"

# [project.entry-points."spam.magical"]
# tomatoes = "spam:main_tomatoes"
